--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
 
 <body>
     <div class="block"></div>
-    <!--#include virtual="/templates/_line_notice.html" -->
     <div class="wrapper">
         <div class="content">
             <br>
@@ -13,12 +12,12 @@
             <br>
             <br>
             <ul>
-                <li><a href="home.html">Первая страница</a></li>
+                <li><a href="onboarding1.html">Начальная страница (Пакет)</a></li>
+                <li><a href="onboarding2.html">Начальная страница (Новая комната)</a></li>
+                <li><a href="onboarding3.html">Начальная страница (Пакет с новой комнатой)</a></li>
             </ul>
         </div>
-        <!--#include virtual="/templates/_footer.html" -->
     </div>
-    <!--#include virtual="/templates/_main_menu_mobile.html" -->
     <!--#include virtual="/templates/_scripts.html" -->
 </body>
 
