правки по онбордингу, сверстан блок услуги со слайдером

--- a/src/onboarding1.html
+++ b/src/onboarding1.html
@@ -9,6 +9,9 @@
         <div class="content">
             <!-- HEADER -->
             <!--#include virtual="/templates/_back-to.html" -->
+
+            <!--#include virtual="/templates/_services.html" -->
+
             <section class="onboarding">
                 <div class="container">
                     <div class="onboarding__inner">
@@ -51,7 +54,8 @@
                                     </div>
                                     <label class="select">
                                         <select>
-                                            <option value="" selected>ЖК 4YOU Business - 1</option>
+                                            <option value="" selected>Выберите ЖК</option>
+                                            <option value="">ЖК 4YOU Business - 1</option>
                                             <option value="">ЖК 4YOU Business - 2</option>
                                             <option value="">ЖК 4YOU Business - 3</option>
                                         </select>
@@ -185,7 +189,7 @@
                             </div>
                             <div class="onboarding__item2">
                                 <div class="onboarding__item2-title title18 _bold">
-                                    Выберите планировку
+                                    Выберите пакет
                                 </div>
                                 <div class="onboarding__checkboxes onboarding__checkboxes_package">
                                     <label class="fake-check fake-check_rounded">
