--- a/src/onboarding2.html
+++ b/src/onboarding2.html
@@ -103,7 +103,7 @@
                                                         Удалить комнату
                                                     </button>
                                                 </div>
-                                                <input class="spaces__item-input" type="text" required>
+                                                <input class="spaces__item-input" type="text" placeholder="м²" required>
                                             </div>
                                             <div class="spaces__item">
                                                 <div class="spaces__item-box">
@@ -115,7 +115,7 @@
                                                         Удалить комнату
                                                     </button>
                                                 </div>
-                                                <input class="spaces__item-input" type="text" required>
+                                                <input class="spaces__item-input" type="text" placeholder="м²" required>
                                             </div>
                                             <div class="spaces__item">
                                                 <div class="spaces__item-box">
@@ -127,7 +127,7 @@
                                                         Удалить комнату
                                                     </button>
                                                 </div>
-                                                <input class="spaces__item-input" type="text" required>
+                                                <input class="spaces__item-input" type="text" placeholder="м²" required>
                                             </div>
                                             <div class="spaces__item">
                                                 <div class="spaces__item-box">
@@ -139,7 +139,7 @@
                                                         Удалить комнату
                                                     </button>
                                                 </div>
-                                                <input class="spaces__item-input" type="text" required>
+                                                <input class="spaces__item-input" type="text" placeholder="м²" required>
                                             </div>
                                             <div class="spaces__item">
                                                 <div class="spaces__item-box">
@@ -151,7 +151,7 @@
                                                         Удалить комнату
                                                     </button>
                                                 </div>
-                                                <input class="spaces__item-input" type="text" required>
+                                                <input class="spaces__item-input" type="text" placeholder="м²" required>
                                             </div>
                                             <div class="spaces__item">
                                                 <div class="spaces__item-box">
@@ -163,7 +163,7 @@
                                                         Удалить комнату
                                                     </button>
                                                 </div>
-                                                <input class="spaces__item-input" type="text" required>
+                                                <input class="spaces__item-input" type="text" placeholder="м²" required>
                                             </div>
                                             <div class="spaces__item">
                                                 <div class="spaces__item-box">
@@ -175,7 +175,7 @@
                                                         Удалить комнату
                                                     </button>
                                                 </div>
-                                                <input class="spaces__item-input" type="text" required>
+                                                <input class="spaces__item-input" type="text" placeholder="м²" required>
                                             </div>
                                             <div class="spaces__item">
                                                 <div class="spaces__item-box">
@@ -187,7 +187,7 @@
                                                         Удалить комнату
                                                     </button>
                                                 </div>
-                                                <input class="spaces__item-input" type="text" required>
+                                                <input class="spaces__item-input" type="text" placeholder="м²" required>
                                             </div>
                                         </div>
                                         <button class="spaces-add">
