--- a/src/onboarding3.html
+++ b/src/onboarding3.html
@@ -218,7 +218,7 @@
                             </div>
                             <div class="onboarding__item2">
                                 <div class="onboarding__item2-title title18 _bold">
-                                    Выберите планировку
+                                    Выберите пакет
                                 </div>
                                 <div class="onboarding__checkboxes onboarding__checkboxes_package">
                                     <label class="fake-check fake-check_rounded">
