--- a/src/onboarding2.html
+++ b/src/onboarding2.html
@@ -9,6 +9,8 @@
         <div class="content">
             <!-- HEADER -->
             <!--#include virtual="/templates/_back-to.html" -->
+            
+            <!--#include virtual="/templates/_services.html" -->
             <section class="onboarding">
                 <div class="container">
                     <div class="onboarding__inner">
