FOOTER & HEADER добавил

--- a/src/onboarding1.html
+++ b/src/onboarding1.html
@@ -7,7 +7,8 @@
     <div class="block"></div>
     <div class="wrapper">
         <div class="content">
-            <!-- HEADER -->
+            <!--#include virtual="/templates/_header.html" -->
+
             <!--#include virtual="/templates/_back-to.html" -->
 
             <!--#include virtual="/templates/_services.html" -->
@@ -301,6 +302,7 @@
             </section>
         </div>
         <!--#include virtual="/templates/_footer-constructor.html" -->
+        <!--#include virtual="/templates/_footer.html" -->
     </div>
     <!--#include virtual="/templates/_scripts.html" -->
 </body>
