--- a/src/onboarding2.html
+++ b/src/onboarding2.html
@@ -7,7 +7,7 @@
     <div class="block"></div>
     <div class="wrapper">
         <div class="content">
-            <!-- HEADER -->
+            <!--#include virtual="/templates/_header.html" -->
             <!--#include virtual="/templates/_back-to.html" -->
             
             <!--#include virtual="/templates/_services.html" -->
