--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
                 <li><a href="onboarding1.html">Начальная страница (Пакет)</a></li>
                 <li><a href="onboarding2.html">Начальная страница (Новая комната)</a></li>
                 <li><a href="onboarding3.html">Начальная страница (Пакет с новой комнатой)</a></li>
+                <br><br>
+                <li><a href="filling.html">Наполнение люстра +1</a></li>
+                <li><a href="filling-desc.html">Наполнение люстра описание</a></li>
             </ul>
         </div>
     </div>
