Свайп меню, оно пока только на странице filling.html, недоделанная страница пакеты

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
                 <br><br>
                 <li><a href="filling.html">Наполнение люстра +1</a></li>
                 <li><a href="filling-desc.html">Наполнение люстра описание</a></li>
+                <br><br>
+                <li><a href="packages.html">Пакеты</a></li>
             </ul>
         </div>
     </div>
