--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
                 <li><a href="filling-desc.html">Наполнение люстра описание</a></li>
                 <br><br>
                 <li><a href="packages.html">Пакеты</a></li>
+                <li><a href="packages-more.html">Пакеты (Подробнее)</a></li>
             </ul>
         </div>
     </div>
