--- a/src/packages.html
+++ b/src/packages.html
@@ -70,7 +70,10 @@
                                             </div>
                                             <div class="filling-product__price">
                                                 <div class="filling-product__price-new">
-                                                    82 500 ₸
+                                                    493 368 ₸
+                                                </div>
+                                                <div class="filling-product__price-old">
+                                                    586 137 ₸
                                                 </div>
                                                 <div class="filling-product__discount">
                                                     -20%
@@ -551,6 +554,11 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="pc-content">
+                        <div class="container">
+                            <div class="pc-content__inner"></div>
                         </div>
                     </div>
                 </section>
