добавил ссылки в индекс на новые страницы

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,8 @@
                 <br><br>
                 <li><a href="packages.html">Пакеты</a></li>
                 <li><a href="packages-more.html">Пакеты (Подробнее)</a></li>
+                <li><a href="packages-category.html">Пакеты (Категория)</a></li>
+                <li><a href="packages-desc.html">Пакеты (Описание)</a></li>
             </ul>
         </div>
     </div>
