--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
                 <li><a href="packages-more.html">Пакеты (Подробнее)</a></li>
                 <li><a href="packages-category.html">Пакеты (Категория)</a></li>
                 <li><a href="packages-desc.html">Пакеты (Описание)</a></li>
+                <br><br>
+                <li><a href="finishing.html">Отделка гостиная (c изменением ракурса)</a></li>
             </ul>
         </div>
     </div>
