исправил картинки планировок

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
                 <li><a href="packages-desc.html">Пакеты (Описание)</a></li>
                 <br><br>
                 <li><a href="finishing.html">Отделка гостиная (c изменением ракурса)</a></li>
+                <br><br>
+                <li><a href="checkout1.html">Checkout: ремонт под ключ</a></li>
             </ul>
         </div>
     </div>
