блок назад fixed в onboarding3.html

--- a/src/onboarding3.html
+++ b/src/onboarding3.html
@@ -7,9 +7,10 @@
     <div class="block"></div>
     <div class="wrapper">
         <div class="content">
-            <!--#include virtual="/templates/_header.html" -->
             <div class="constructor">
-                <!--#include virtual="/templates/_back-to.html" -->
+                <div class="header-back-to">
+                    <!--#include virtual="/templates/_back-to.html" -->
+                </div>
     
                 <!--#include virtual="/templates/_services.html" -->
                 <section class="onboarding">
