модалки для онбординга

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,13 @@
                 <li><a href="onboarding2.html">Начальная страница (Новая комната)</a></li>
                 <li><a href="onboarding3.html">Начальная страница (Пакет с новой комнатой)</a></li>
                 <br><br>
+                <li><a href="onboarding-modal1.html">onboarding Поп-ап</a></li>
+                <li><a href="onboarding-modal2.html">onboarding Поп-ап</a></li>
+                <li><a href="onboarding-modal3.html">onboarding Поп-ап</a></li>
+                <li><a href="onboarding-modal4.html">onboarding Поп-ап</a></li>
+                <li><a href="onboarding-modal5.html">onboarding Поп-ап</a></li>
+                <li><a href="onboarding-modal6.html">onboarding Поп-ап</a></li>
+                <br><br>
                 <li><a href="filling.html">Наполнение люстра +1</a></li>
                 <li><a href="filling-desc.html">Наполнение люстра описание</a></li>
                 <br><br>
