--- a/src/onboarding1.html
+++ b/src/onboarding1.html
@@ -25,21 +25,21 @@
                                         Город
                                     </div>
                                     <div class="onboarding__checkboxes">
-                                        <label class="fake-check">
+                                        <label class="fake-check2">
                                             <input type="radio" name="city" checked>
-                                            <div class="fake-check__btn">
+                                            <div class="fake-check2__btn">
                                                 Алматы
                                             </div>
                                         </label>
-                                        <label class="fake-check">
+                                        <label class="fake-check2">
                                             <input type="radio" name="city">
-                                            <div class="fake-check__btn">
+                                            <div class="fake-check2__btn">
                                                 Нур-султан
                                             </div>
                                         </label>
-                                        <label class="fake-check">
+                                        <label class="fake-check2">
                                             <input type="radio" name="city">
-                                            <div class="fake-check__btn">
+                                            <div class="fake-check2__btn">
                                                 Шымкент
                                             </div>
                                         </label>
@@ -69,33 +69,33 @@
                                             Выберите комнатность
                                         </div>
                                         <div class="onboarding__checkboxes">
-                                            <label class="fake-check">
+                                            <label class="fake-check2">
                                                 <input type="radio" name="rooms">
-                                                <div class="fake-check__btn">
+                                                <div class="fake-check2__btn">
                                                     1
                                                 </div>
                                             </label>
-                                            <label class="fake-check">
+                                            <label class="fake-check2">
                                                 <input type="radio" name="rooms">
-                                                <div class="fake-check__btn">
+                                                <div class="fake-check2__btn">
                                                     2
                                                 </div>
                                             </label>
-                                            <label class="fake-check">
+                                            <label class="fake-check2">
                                                 <input type="radio" name="rooms">
-                                                <div class="fake-check__btn">
+                                                <div class="fake-check2__btn">
                                                     3
                                                 </div>
                                             </label>
-                                            <label class="fake-check">
+                                            <label class="fake-check2">
                                                 <input type="radio" name="rooms" checked>
-                                                <div class="fake-check__btn">
+                                                <div class="fake-check2__btn">
                                                     4
                                                 </div>
                                             </label>
-                                            <label class="fake-check">
+                                            <label class="fake-check2">
                                                 <input type="radio" name="rooms">
-                                                <div class="fake-check__btn">
+                                                <div class="fake-check2__btn">
                                                     5
                                                 </div>
                                             </label>
@@ -108,15 +108,15 @@
                                     </div>
                                     <div class="onboarding__row onboarding__row_item-center">
                                         <div class="onboarding__checkboxes">
-                                            <label class="fake-check fake-check_rounded">
+                                            <label class="fake-check2 fake-check_rounded">
                                                 <input type="radio" name="space">
-                                                <div class="fake-check__btn">
+                                                <div class="fake-check2__btn">
                                                     140- 160 м²
                                                 </div>
                                             </label>
-                                            <label class="fake-check fake-check_rounded">
+                                            <label class="fake-check2 fake-check_rounded">
                                                 <input type="radio" name="space" checked>
-                                                <div class="fake-check__btn">
+                                                <div class="fake-check2__btn">
                                                     160+ м²
                                                 </div>
                                             </label>
@@ -190,21 +190,21 @@
                                         Выберите пакет
                                     </div>
                                     <div class="onboarding__checkboxes onboarding__checkboxes_package">
-                                        <label class="fake-check fake-check_rounded">
+                                        <label class="fake-check2 fake-check_rounded">
                                             <input type="radio" name="space">
-                                            <div class="fake-check__btn">
+                                            <div class="fake-check2__btn">
                                                 Стандарт
                                             </div>
                                         </label>
-                                        <label class="fake-check fake-check_rounded">
+                                        <label class="fake-check2 fake-check_rounded">
                                             <input type="radio" name="space">
-                                            <div class="fake-check__btn">
+                                            <div class="fake-check2__btn">
                                                 Комфорт
                                             </div>
                                         </label>
-                                        <label class="fake-check fake-check_rounded">
+                                        <label class="fake-check2 fake-check_rounded">
                                             <input type="radio" name="space" checked>
-                                            <div class="fake-check__btn">
+                                            <div class="fake-check2__btn">
                                                 Премиум
                                             </div>
                                         </label>
@@ -213,78 +213,78 @@
                                         Пакеты включают в себя черновые и чистовые материалы, а также профессиональный ремонт и гарантию от BI Group  
                                     </p>
                                     <div class="packages">
-                                        <a href="#" class="package">
-                                            <div class="package__image">
+                                        <a href="#" class="package2">
+                                            <div class="package2__image">
                                                 <img src="images/package1.jpg" alt="">
                                             </div>
-                                            <div class="package__inner">
-                                                <div class="package__name">
+                                            <div class="package2__inner">
+                                                <div class="package2__name">
                                                     Прайм
                                                 </div>
-                                                <div class="package__price">
+                                                <div class="package2__price">
                                                     117 900 <span>₸/м²</span>
                                                 </div>
-                                                <ul class="package__desc">
+                                                <ul class="package2__desc">
                                                     <li>
-                                                        <div class="package__desc-title">
+                                                        <div class="package2__desc-title">
                                                             Ламинат
                                                         </div>
-                                                        <div class="package__desc-text">
+                                                        <div class="package2__desc-text">
                                                             Серия Kronotex Herringbone, 32 класс, 8 мм
                                                         </div>
                                                     </li>
                                                     <li>
-                                                        <div class="package__desc-title">
+                                                        <div class="package2__desc-title">
                                                             Двери
                                                         </div>
-                                                        <div class="package__desc-text">
+                                                        <div class="package2__desc-text">
                                                             BELWOODDOORS, Палаццо
                                                         </div>
                                                     </li>
                                                     <li>
-                                                        <div class="package__desc-title">
+                                                        <div class="package2__desc-title">
                                                             Смесители
                                                         </div>
-                                                        <div class="package__desc-text">
+                                                        <div class="package2__desc-text">
                                                             Grohe, Германия
                                                         </div>
                                                     </li>
                                                 </ul>
                                             </div>
                                         </a>
-                                        <a href="#" class="package">
-                                            <div class="package__image">
+                                        <a href="#" class="package2">
+                                            <div class="package2__image">
                                                 <img src="images/package1.jpg" alt="">
                                             </div>
-                                            <div class="package__inner">
-                                                <div class="package__name">
+                                            <div class="package2__inner">
+                                                <div class="package2__name">
                                                     Урбан
                                                 </div>
-                                                <div class="package__price">
+                                                <div class="package2__price">
                                                     123 900 <span>₸/м²</span>
                                                 </div>
-                                                <ul class="package__desc">
+                                                <ul class="package2__desc">
                                                     <li>
-                                                        <div class="package__desc-title">
+                                                        <div class="package2__desc-title">
                                                             Ламинат
                                                         </div>
-                                                        <div class="package__desc-text">
+                                                        <div class="package2__desc-text">
                                                             Tarkett, 33 класс, 8 мм
                                                         </div>
                                                     </li>
                                                     <li>
-                                                        <div class="package__desc-title">
+                                                        <div class="package2__desc-title">
                                                             Двери
                                                         </div>
-                                                        <div class="package__desc-text">
+                                                        <div class="package2__desc-text">
                                                             Profildoors
                                                         </div>
                                                     </li>
                                                     <li>
-                                                        <div class="package__desc-title">
+                                                        <div class="package2__desc-title">
                                                             Смесители
                                                         </div>
-                                                        <div class="package__desc-text">
+                                                        <div class="package2__desc-text">
                                                             WasserKraft
                                                         </div>
                                                     </li>
