--- a/src/onboarding2.html
+++ b/src/onboarding2.html
@@ -64,11 +64,11 @@
                                         </label>
                                     </div>
                                 </div>
-                                <div class="didnt-find">
-                                    <p class="didnt-find__text">
+                                <div class="didnt-find2">
+                                    <p class="didnt-find2__text">
                                         <img src="images/info-icon.svg" alt="info">Не нашли свой ЖК?
                                     </p>
-                                    <a href="#" class="didnt-find__btn button button1">
+                                    <a href="#" class="didnt-find2__btn button button1">
                                         Оставить заявку
                                     </a>
                                 </div>
